<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdvancedSearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/main_toolbar"
            layout="@layout/main_toolbar" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/search"
            app:backgroundTint="?attr/editTextColor"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextColor"/>

        <TextView
            android:id="@+id/sort_by_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/headerSecondaryColor"
            android:text="@string/sort_by"
            android:textColor="?attr/headerTextColor" />

        <RadioGroup
            android:id="@+id/radio_group_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_recipe_name"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_orange"
                android:text="@string/name"
                android:textColor="?attr/secondaryTextColor"/>

            <RadioButton
                android:id="@+id/radio_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_orange"
                android:text="@string/prep_time"
                android:textColor="?attr/secondaryTextColor"/>

            <RadioButton
                android:id="@+id/radio_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_orange"
                android:text="@string/total_time"
                android:textColor="?attr/secondaryTextColor"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_ascending"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_orange"
                android:text="@string/ascending"
                android:textColor="?attr/secondaryTextColor"/>

            <RadioButton
                android:id="@+id/radio_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_orange"
                android:text="@string/descending"
                android:textColor="?attr/secondaryTextColor"/>

        </RadioGroup>

        <TextView
            android:id="@+id/limit_to_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/headerSecondaryColor"
            android:text="@string/limit_to"
            android:textColor="?attr/headerTextColor" />

        <TextView
            android:id="@+id/ingredients_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:text="@string/ingredients" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <AutoCompleteTextView
                android:id="@+id/edit_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textCursorDrawable="@null"
                app:backgroundTint="?attr/editTextColor"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/editTextColor"/>

            <Button
                android:id="@+id/button_add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/button_style"
                android:text="@string/add"
                android:textColor="?attr/buttonTextColor"/>

        </LinearLayout>

        <ListView
            android:id="@+id/ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/categories_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="?attr/primaryTextColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <AutoCompleteTextView
                android:id="@+id/edit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textCursorDrawable="@null"
                app:backgroundTint="?attr/editTextColor"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/editTextColor"/>

            <Button
                android:id="@+id/button_add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/button_style"
                android:text="@string/add"
                android:textColor="?attr/buttonTextColor"/>

        </LinearLayout>

        <ListView
            android:id="@+id/category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/advanced_search_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/search"
            android:textColor="?attr/buttonTextColor"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>