<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?attr/popupBackground"
    android:outlineSpotShadowColor="@color/colorPrimary">

    <Spinner
        android:id="@+id/unit_conversion_popup_old_unit_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider1"
        android:background="?attr/spinnerColor"
        android:popupBackground="?attr/spinnerColor"/>
    <TextView
        android:id="@+id/unit_conversion_popup_old_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/old_unit"
        android:textColor="?attr/primaryTextColor"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="19dp"
        android:background="?attr/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_conversion_popup_old_unit_spinner"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/unit_conversion_popup_new_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/new_unit"
        android:textColor="?attr/primaryTextColor"/>

    <Spinner
        android:id="@+id/unit_conversion_popup_new_unit_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        android:popupBackground="?attr/spinnerColor"
        android:background="?attr/spinnerColor"/>

    <Button
        android:id="@+id/unit_conversion_popup_okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:text="@string/okay"
        android:onClick="onUnitConversionPopupOkayButtonPressed"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_conversion_popup_new_unit_spinner"
        android:textColor="?attr/buttonTextColor"/>

    <Button
        android:id="@+id/edit_ingredient_popup_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:text="@string/cancel"
        android:background="@drawable/button_style"
        android:onClick="onUnitConversionPopupCancelButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_conversion_popup_new_unit_spinner"
        android:textColor="?attr/buttonTextColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>