<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?attr/popupBackground"
    android:outlineSpotShadowColor="@color/colorPrimary">

    <EditText
        android:id="@+id/edit_ingredient_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/direction"
        android:textCursorDrawable="@null"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:backgroundTint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:textColorHint="?attr/editTextColor"
        />


    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="?attr/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_edit_text" />

    <Button
        android:id="@+id/edit_ingredient_popup_okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/okay"
        android:background="@drawable/button_style"
        android:layout_marginRight="20dp"
        android:textColor="?attr/buttonTextColor"
        android:onClick="onEditIngredientPopupOkayButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_edit_text" />

    <Button
        android:id="@+id/edit_ingredient_popup_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:text="@string/remove"
        android:textColor="?attr/buttonTextColor"
        android:onClick="onEditIngredientPopupRemoveButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>