<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/edit_recipe_toolbar"
            layout="@layout/edit_recipe_toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recipe Title" />

        <EditText
            android:id="@+id/edit_recipe_recipe_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@null"
            app:backgroundTint="?attr/editTextColor"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextColor"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?attr/dividerColor"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servings" />

        <EditText
            android:id="@+id/edit_recipe_servings_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/servings"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@null"
            app:backgroundTint="?attr/editTextColor"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextColor"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prep_time_min" />

        <EditText
            android:id="@+id/edit_recipe_prep_time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prep_time_min"
            android:inputType="time"
            android:textCursorDrawable="@null"
            app:backgroundTint="?attr/editTextColor"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextColor"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_time_min" />

        <EditText
            android:id="@+id/edit_recipe_total_time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/total_time_min"
            android:inputType="time"
            android:textCursorDrawable="@null"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextColor"
            app:backgroundTint="?attr/editTextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/edit_recipe_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onEditRecipeImagePressed"
            app:srcCompat="@drawable/upload_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"   >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_recipe_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onEditRecipeCancelButtonPressed"
                app:backgroundTint="@color/royal_blue"
                app:fabSize="normal"
                app:maxImageSize="48dp"
                app:srcCompat="@drawable/ic_cancel_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_recipe_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onEditRecipeNextButtonPressed"
                android:tint="@color/black"
                app:backgroundTint="@color/royal_blue"
                app:fabSize="normal"
                app:maxImageSize="48dp"
                app:rippleColor="@color/black"
                app:srcCompat="@drawable/ic_arrow_right_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.1" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>